; ModuleID = '/home/carl/AnghaBench/postgres/src/backend/tcop/extr_pquery.c_FetchPortalTargetList.c'
source_filename = "/home/carl/AnghaBench/postgres/src/backend/tcop/extr_pquery.c_FetchPortalTargetList.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_4__ = type { i64 }

@PORTAL_MULTI_QUERY = common dso_local global i64 0, align 8
@NIL = common dso_local global i32* null, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32* @FetchPortalTargetList(%struct.TYPE_4__* %0) #0 {
  %2 = alloca i32*, align 8
  %3 = alloca %struct.TYPE_4__*, align 8
  store %struct.TYPE_4__* %0, %struct.TYPE_4__** %3, align 8
  %4 = load %struct.TYPE_4__*, %struct.TYPE_4__** %3, align 8
  %5 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %4, i32 0, i32 0
  %6 = load i64, i64* %5, align 8
  %7 = load i64, i64* @PORTAL_MULTI_QUERY, align 8
  %8 = icmp eq i64 %6, %7
  br i1 %8, label %9, label %11

9:                                                ; preds = %1
  %10 = load i32*, i32** @NIL, align 8
  store i32* %10, i32** %2, align 8
  br label %16

11:                                               ; preds = %1
  %12 = load %struct.TYPE_4__*, %struct.TYPE_4__** %3, align 8
  %13 = call i64 @PortalGetPrimaryStmt(%struct.TYPE_4__* %12)
  %14 = inttoptr i64 %13 to i32*
  %15 = call i32* @FetchStatementTargetList(i32* %14)
  store i32* %15, i32** %2, align 8
  br label %16

16:                                               ; preds = %11, %9
  %17 = load i32*, i32** %2, align 8
  ret i32* %17
}

declare dso_local i32* @FetchStatementTargetList(i32*) #1

declare dso_local i64 @PortalGetPrimaryStmt(%struct.TYPE_4__*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
